fix horizontal scrollbar

--- a/index.css
+++ b/index.css
@@ -109,8 +109,11 @@ nav .menu-text{
 .bou {
 	background: #EEE9DF;
 	margin-top: 120px;
-	margin-left: -15px;
-	margin-right: -15px;
+	/* margin-left: -15px;
+	margin-right: -15px; */
+}
+.noleft {
+	padding-left: 0;
 }
 .ooi {
 	background: #DFD9CE;
